Fixed deprecated String -> Double conversion, commented out unnecessary/unused imports, etc.